sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:8: error: value color is not a member of Int
    getColor(i) color match {
                ^